node-app-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf-node-app-service
spec:
  type: LoadBalancer
  selector: 
    app: mf-node-app
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30007
