node-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mf-node-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mf-node-app.k8s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mf-node-app-service
            port:
              number: 3000
